--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,3 +1,7 @@
 flask==1.1.1
 flask-restplus==0.13.0
+flask-admin==1.5.4
+peewee==3.11.2
+wtf-peewee==3.0.0
+psycopg2-binary==2.8.4
 gunicorn==19.9.0
