--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,7 @@
 flask==1.1.1
 flask-restplus==0.12.1
 flask-admin==1.5.4
+flask-cors==3.0.8
 peewee==3.11.2
 wtf-peewee==3.0.0
 psycopg2-binary==2.8.4
